Changes made to resume and index to show most recent experience.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -207,6 +207,10 @@ header {
   height: 120px;
 }
 
+.heading-hvr:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
 /*---------------------------------------------------------------Footer*/
 
 footer {
