Updated Looker to Resume & CSS hvr styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,10 @@ header {
   color: rgba(0, 0, 0, 0.6);
 }
 
+.paragraph-hvr:hover {
+  color: rgba(0, 0, 0, 0.6);
+}
+
 /*---------------------------------------------------------------Footer*/
 
 footer {
