--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -467,3 +467,10 @@ footer {
     max-width: 50%;
 }
 }
+
+  .mobile-display{display:none}
+  .desktop-display{display:block}
+@media (max-width:800px){
+  .desktop-display {display:none}
+  .mobile-display {display:block}
+}
